--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm run build
 
       - name: Deploy
-        uses: ftp-deploy/action@v2
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           host: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
