--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Install dependencies
         run: composer install
 
+      - name: Install Vite
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
+        
       - name: Build
         run: npm run build
 
