--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "ryangjchandler/laravel-cloudflare-turnstile": "^0.2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
