--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install dependencies
         run: composer install
 
+      - name: Update dependencies
+        run: composer update
+    
       - name: Setup Node
         uses: actions/setup-node@v3
 
