--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+
+      - name: Update dependencies
+        run: composer update
+
         
       - name: Install dependencies
         run: composer install
