--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
 
       - name: Update dependencies
-        run: composer update
+        run: composer install
     
       - name: Setup Node
         uses: actions/setup-node@v3
