--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: asd
-
-      - name: Update dependencies
+        
+      - name: Install dependencies
         run: composer install
     
       - name: Setup Node
