--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,10 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-    
+          
+      - name: Install Dependencies
+        run: composer update --ignore-platform-reqs
+      
       - name: Setup Node
         uses: actions/setup-node@v3
 
