--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           php-version: '8.2'
           
       - name: Install Dependencies
-        run: composer update --ignore-platform-reqs
+        run: composer install --ignore-platform-reqs
       
       - name: Setup Node
         uses: actions/setup-node@v3
